更新图片服务器

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -22,5 +22,6 @@ redis:
     max-wait: -1
 file:
   image:
+    host: http://localhost:9000
     url-mapping: /image/
     store-path: /Users/nonlinearthink/Documents/image/
