--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,3 +8,10 @@ spring:
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+mini-program:
+  user:
+    appid: wxdc77479836a295c3
+    secret: 77f8448883bfe693fcd05c8188e3e62e
+  doctor:
+    appid: wxbcb506cbd018cd24
+    secret: 1327e89037a3ee04c1ddb9b54f9ae803
