--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.example</groupId>
     <artifactId>server</artifactId>
-    <version>0.4.0</version>
+    <version>0.4.1</version>
     <name>server</name>
     <description>Demo project for Spring Boot</description>
     <properties>
@@ -60,6 +60,11 @@
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
             <version>3.14.0</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.4</version>
         </dependency>
         <!-- 测试插件 -->
         <dependency>
